# semantic_nav_ws

./: .gitignore  CLAUDE.md  README.md  ugv_rover_depth_only_issues.md
eval/: affordance_holdout.py  affordance_holdout_results_llama3_8b.csv  affordance_holdout_results_qwen3_14b.csv  affordance_holdout_results_qwen3_32b.csv  enroute_ablation.py  enroute_blockage_trigger.py  enroute_common.py  enroute_scenarios.yaml  log_session.sh  map_residual_check.py  mock_concept_graph_detector.py  open_set_A1.txt  open_set_A2_llama3_8b.txt  open_set_A2_qwen3_14b.txt  open_set_A2_qwen3_32b.txt  open_set_scenario.md  ranker_results_llama3_8b.csv  ranker_results_qwen3_14b.csv  ranker_results_qwen3_32b.csv  run_enroute_trial.sh  test_enroute_harness.py  test_m2_action_completion.py  test_m3_barrier_clearance.py
eval/benchmark_v0/: ground_truth_v0.yaml  object_intent_affordances_v0.json
src/semantic_nav_bringup/: package.xml  setup.cfg  setup.py
src/semantic_nav_bringup/config/: nav2_semantic_params.yaml  rover_semantic_nav_params.yaml
src/semantic_nav_bringup/launch/: aws_small_house_tb3.launch.py  aws_small_house_ugv.launch.py  aws_small_house_ugv_semantic.launch.py  recovery_trigger_layer.launch.py  rover_rtabmap_rgbd.launch.py  semantic_nav_core.launch.py  semantic_nav_llm.launch.py  semantic_nav_system.launch.py
src/semantic_nav_bringup/models/obstacle_scenario/: ball_scenario.sdf  bucket.sdf  chair_scenario.sdf
src/semantic_nav_bringup/models/person_scenario/: person_scenario.sdf
src/semantic_nav_bringup/models/ugv_rover_depth/: model.config  model.sdf
src/semantic_nav_bringup/scripts/: close_door.sh  close_partition.sh  open_door.sh  open_partition.sh
src/semantic_nav_bringup/worlds/: small_house_semantic.world  small_house_ugv.world
src/semantic_nav_executor/: package.xml  setup.cfg  setup.py
src/semantic_nav_executor/semantic_nav_executor/: executor_node.py
src/semantic_nav_interfaces/: CMakeLists.txt  package.xml
src/semantic_nav_interfaces/action/: ExecutePose.action
src/semantic_nav_interfaces/msg/: DoorStateArray.msg  DoorStateObservation.msg  DynamicObjectArray.msg  DynamicObjectObservation.msg  ObjectInstance.msg  RecoveryTrigger.msg  SemanticCorrectionReport.msg  SemanticDB.msg  SemanticMapUpdate.msg  SemanticStoreUpdated.msg
src/semantic_nav_interfaces/srv/: InferAffordance.srv  MatchResponsibleObject.srv  NavigateToQuery.srv  OperatorDecision.srv  ParseSemanticCommand.srv  ProposeRecovery.srv  QuerySemanticRegion.srv  RefreshLocalObjects.srv  RequestRecovery.srv  ResolveLocation.srv  ValidatePose.srv
src/semantic_nav_llm/: package.xml  setup.cfg  setup.py
src/semantic_nav_llm/config/: affordance_intent.gbnf  recovery_intent.gbnf  semantic_intent.gbnf
src/semantic_nav_llm/semantic_nav_llm/: navigator_node.py
src/semantic_nav_llm/test/: test_navigator_affordance.py  test_navigator_recovery_parse.py
src/semantic_nav_nav2_plugins/: CMakeLists.txt  package.xml
src/semantic_nav_nav2_plugins/config/: semantic_recovery_bt.xml  semantic_recovery_bt_geometric.xml
src/semantic_nav_nav2_plugins/include/semantic_nav_nav2_plugins/: capture_blockage_context.hpp  compute_standoff_pose.hpp  dynamic_wait.hpp  emit_obstacle_signal.hpp  escalate_to_llm_recovery.hpp  has_responsible_object_candidate.hpp  operator_prompt.hpp  path_clear_condition.hpp  persistent_no_progress_condition.hpp  query_semantic_context.hpp  robot_pose_util.hpp  validate_semantic.hpp  wait_for_barrier_clear.hpp  wait_for_dynamic_obstacle_departure.hpp
src/semantic_nav_nav2_plugins/src/: capture_blockage_context.cpp  compute_standoff_pose.cpp  dynamic_wait.cpp  emit_obstacle_signal.cpp  escalate_to_llm_recovery.cpp  has_responsible_object_candidate.cpp  operator_prompt.cpp  path_clear_condition.cpp  persistent_no_progress_condition.cpp  query_semantic_context.cpp  register_nodes.cpp  validate_semantic.cpp  wait_for_barrier_clear.cpp  wait_for_dynamic_obstacle_departure.cpp
src/semantic_nav_nav2_plugins/test/: test_bt_plugins.cpp  test_bt_plugins_live.cpp  test_dynamic_wait.cpp  test_persistent_no_progress_condition.cpp  test_wait_for_barrier_clear.cpp  test_wait_for_dynamic_obstacle_departure.cpp
src/semantic_nav_operator_io/: package.xml  setup.cfg  setup.py
src/semantic_nav_operator_io/semantic_nav_operator_io/: operator_io_node.py
src/semantic_nav_operator_io/test/: test_operator_io_node.py
src/semantic_nav_orchestrator/: package.xml  setup.cfg  setup.py
src/semantic_nav_path_monitor/: package.xml  setup.cfg  setup.py
src/semantic_nav_path_monitor/semantic_nav_path_monitor/: plan_intersection_monitor.py
src/semantic_nav_semantics/: package.xml  setup.cfg  setup.py
src/semantic_nav_semantics/config/: door_portal_metadata.json  map_v001.json  map_v002.json  object_action_attributes.json  object_intent_affordances.json  semantic_db.json  semantic_db_cg.json
src/semantic_nav_semantics/semantic_nav_semantics/: affordance_classification.py  bm25.py  caption_ranker.py  door_state_estimation.py  door_state_monitor_node.py  dynamic_overlay.py  hybrid_caption_ranker.py  llama_action_client.py  llm_caption_ranker.py  local_object_query_node.py  mock_map_provider_node.py  ranker_factory.py  resolver_node.py  semantic_store.py  spatial_context.py  standoff_planner.py
src/semantic_nav_semantics/semantic_nav_semantics/eval/: fixture_loader.py  ground_truth.yaml  plot_results.py  run_ranker_eval.py
src/semantic_nav_semantics/test/: test_affordance_classification.py  test_bm25.py  test_caption_ranker.py  test_door_map_entry.py  test_door_state_estimation.py  test_door_state_overlay.py  test_dynamic_affordance_classification.py  test_dynamic_overlay_cache.py  test_fixture_loader.py  test_hybrid_caption_ranker.py  test_llama_action_client.py  test_llm_caption_ranker.py  test_open_set_dynamic_classification.py  test_ranker_factory.py  test_resolver_node_v2.py  test_semantic_store.py  test_semantic_store_query_window.py  test_spatial_context.py  test_standoff_planner.py
src/semantic_nav_validator/: package.xml  setup.cfg  setup.py
(+23 files in other folders)
