<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>semantic_nav_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for semantic navigation with RTAB-Map and Nav2.</description>
  <maintainer email="shakerkamal18@gmail.com">shaker</maintainer>
  <license>Apache-2.0</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>semantic_nav_executor</depend>
  <depend>semantic_nav_semantics</depend>
  <depend>semantic_nav_validator</depend>
  <depend>semantic_nav_llm</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
